Fixed a bug with the buttons alignment

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -19,7 +19,7 @@
   font-size: $button-default-font-size;
   line-height: 1;
   overflow: hidden;
-  padding: $button-default-padding-value 3 * $button-default-padding-value;
+  padding: $button-default-padding-value 0;
   position: relative;
   text-align: center;
   text-decoration: none;
